[gd_scene load_steps=36 format=3 uid="uid://8friexay1ww1"]

[ext_resource type="Script" path="res://code/characters/player/player.gd" id="1_tvp68"]
[ext_resource type="Texture2D" uid="uid://o05xy5cbgu7" path="res://assets/sprites/frog.png" id="2_8fyhb"]
[ext_resource type="Texture2D" uid="uid://u18ubbnbt556" path="res://assets/sprites/space_bar.png" id="3_h3t45"]
[ext_resource type="Texture2D" uid="uid://bu088wukm3pgv" path="res://assets/sprites/frog_outline.png" id="3_lrwsu"]
[ext_resource type="AudioStream" uid="uid://bf2gqdtceyd4y" path="res://assets/sfx/sfx_jump-01.wav" id="4_rvluc"]
[ext_resource type="AudioStream" uid="uid://cg53gu00enapo" path="res://assets/sfx/sfx_jump-02.wav" id="5_8ug31"]
[ext_resource type="AudioStream" uid="uid://cxlna1thivgdj" path="res://assets/sfx/sfx_land.wav" id="6_fuad7"]
[ext_resource type="AudioStream" uid="uid://cw37tpceans63" path="res://assets/sfx/splash 7.wav" id="7_wg8yb"]
[ext_resource type="AudioStream" uid="uid://bj825ntcbq3tb" path="res://assets/sfx/splash 11.wav" id="8_ygtfq"]
[ext_resource type="AudioStream" uid="uid://dfpd55jrwp8t2" path="res://assets/sfx/splash 16.wav" id="9_mgqbj"]
[ext_resource type="AudioStream" uid="uid://dtc3xf78nutvt" path="res://assets/sfx/sfx_die.wav" id="10_hia6w"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nvo52"]
radius = 8.0
height = 16.0

[sub_resource type="Animation" id="Animation_v7igd"]
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_clakq"]
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_iisi2"]
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_rma1f"]
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SFXLand")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2smdt"]
_data = {
"Fall": SubResource("Animation_v7igd"),
"Idle": SubResource("Animation_clakq"),
"Jump": SubResource("Animation_iisi2"),
"Land": SubResource("Animation_rma1f")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qdlme"]
animation = &"Fall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6pirx"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_52og8"]
animation = &"Jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qhpfo"]
animation = &"Land"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_4dbwu"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t7x1s"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ccoa0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cx0cn"]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pnrni"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_byqjn"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_c3wrb"]
states/Fall/node = SubResource("AnimationNodeAnimation_qdlme")
states/Fall/position = Vector2(467, 33)
states/Idle/node = SubResource("AnimationNodeAnimation_6pirx")
states/Idle/position = Vector2(354, 85)
states/Jump/node = SubResource("AnimationNodeAnimation_52og8")
states/Jump/position = Vector2(503, 151)
states/Land/node = SubResource("AnimationNodeAnimation_qhpfo")
states/Land/position = Vector2(652, 85)
states/Start/position = Vector2(175, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_4dbwu"), "Idle", "Jump", SubResource("AnimationNodeStateMachineTransition_t7x1s"), "Idle", "Fall", SubResource("AnimationNodeStateMachineTransition_ccoa0"), "Land", "Idle", SubResource("AnimationNodeStateMachineTransition_cx0cn"), "Jump", "Fall", SubResource("AnimationNodeStateMachineTransition_pnrni"), "Fall", "Land", SubResource("AnimationNodeStateMachineTransition_byqjn")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8j2ys"]
bg_color = Color(0.968627, 0.878431, 0.698039, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ga4uw"]
bg_color = Color(0.392157, 0.611765, 0.266667, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_ernn0"]
radius = 6.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_oxl6w"]
random_pitch = 1.1
random_volume_offset_db = 2.0
streams_count = 2
stream_0/stream = ExtResource("4_rvluc")
stream_1/stream = ExtResource("5_8ug31")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_d80tk"]
random_pitch = 1.1
random_volume_offset_db = 5.0
streams_count = 1
stream_0/stream = ExtResource("6_fuad7")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_5idsf"]
random_pitch = 1.1
random_volume_offset_db = 5.0
streams_count = 3
stream_0/stream = ExtResource("7_wg8yb")
stream_1/stream = ExtResource("8_ygtfq")
stream_2/stream = ExtResource("9_mgqbj")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8dnvn"]
random_pitch = 1.1
random_volume_offset_db = 5.0
streams_count = 1
stream_0/stream = ExtResource("10_hia6w")

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
floor_stop_on_slope = false
floor_max_angle = 1.1781
script = ExtResource("1_tvp68")
jump_max_hold_time = 0.5

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_8fyhb")
hframes = 3
vframes = 2
frame = 1
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "res://assets/sprites",
"o_name": "",
"only_visible": false,
"player": "AnimationPlayer",
"slice": "",
"source": "res://assets/sprites/frog.ase"
}
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": true,
"layer_section": true,
"output_section": true,
"slice_section": true
}
metadata/_aseprite_wizard_source_file_hash_ = "8e46e9ccb010491716817538fd3423f1"

[node name="KeybindSprite" type="Sprite2D" parent="Sprite"]
position = Vector2(0, -17)
texture = ExtResource("3_h3t45")

[node name="OutlineSprite" type="Sprite2D" parent="."]
visibility_layer = 0
z_index = -1
texture_filter = 1
texture = ExtResource("3_lrwsu")
hframes = 3
vframes = 2
frame = 1
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "res://assets/sprites",
"o_name": "",
"only_visible": false,
"player": "AnimationPlayer",
"slice": "",
"source": "res://assets/sprites/frog.ase"
}
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": true,
"layer_section": true,
"output_section": true,
"slice_section": true
}
metadata/_aseprite_wizard_source_file_hash_ = "8e46e9ccb010491716817538fd3423f1"

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_nvo52")

[node name="CameraTransform" type="RemoteTransform2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2smdt")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_c3wrb")
anim_player = NodePath("../AnimationPlayer")
parameters/current_length = 1.5
parameters/current_position = 1.14183
parameters/current_delta = 0.00666667
parameters/End/current_length = null
parameters/End/current_position = null
parameters/End/current_delta = null
parameters/Fall/current_length = 0.1
parameters/Fall/current_position = 0.04982
parameters/Fall/current_delta = 0.0166667
parameters/Idle/current_length = 1.5
parameters/Idle/current_position = 1.14183
parameters/Idle/current_delta = 0.00666667
parameters/Jump/current_length = 0.1
parameters/Jump/current_position = 0.0751146
parameters/Jump/current_delta = 0.0166667
parameters/Land/current_length = 0.15
parameters/Land/current_position = 0.15
parameters/Land/current_delta = 0.0333333
parameters/Start/current_length = 0.0
parameters/Start/current_position = 0.0
parameters/Start/current_delta = 0.0

[node name="JumpBar" type="ProgressBar" parent="."]
visibility_layer = 0
offset_left = -7.0
offset_top = -13.0
offset_right = 7.0
offset_bottom = -11.0
theme_override_styles/background = SubResource("StyleBoxFlat_8j2ys")
theme_override_styles/fill = SubResource("StyleBoxFlat_ga4uw")
max_value = 1.0
show_percentage = false

[node name="DeathBoxDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="Area" type="CollisionShape2D" parent="DeathBoxDetector"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_ernn0")

[node name="SFXJump" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_oxl6w")

[node name="SFXLand" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_d80tk")
volume_db = -10.0

[node name="SFXSplash" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_5idsf")
volume_db = -5.0

[node name="SFXDie" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_8dnvn")
volume_db = -5.0

[connection signal="area_entered" from="DeathBoxDetector" to="." method="_on_death_box_detector_area_entered"]
[connection signal="body_entered" from="DeathBoxDetector" to="." method="_on_death_box_detector_body_entered"]
